# extract-recipe

./: .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml  recipe.md
src/extract_recipe/: __init__.py  boilerplate.conf  boilerplate.py  cli.py  formatter.py  history.py  paste.py  redact.py
